[package]
name = "lucky"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
env_logger = "0.11.2"
reqwest = { version = "0.11.24",features = ["blocking"]  }
error-chain = "0.12.4"
serde_json = "1.0.114"
serde = { version = "1.0.197", features = ["derive"] }
anyhow = "1.0.80"
rust_decimal = "1.34.3"
rust_decimal_macros = "1.34.2"

